<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="setting_label">설정</string>
    <string name="setting_total_drink_amount">지금까지 마신 술 %d병 %d잔</string>
    <string name="setting_version_info">버전 정보</string>
    <string name="setting_notification">공지사항</string>
    <string name="setting_terms_of_use">이용약관</string>
    <string name="setting_privacy_policy">개인정보 처리 방침</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_delete_account">회원탈퇴</string>
    <string name="setting_copyrights">\@\ copyrights by 술술</string>

    <string name="delete_account_title">계정을 삭제하면\n아래 정보가 사라져요!</string>
    <string name="delete_account_subtitle">사라진 정보는 다시 복구할 수 없어요.</string>
    <string name="delete_account_check">그래도 탈퇴하시겠어요?</string>
    <string name="delete_account_execute">탈퇴할래요</string>

    <string name="dialog_logout_subtitle">술술에서 로그아웃 하시겠어요?</string>
    <string name="dialog_logout_execute">로그아웃 하기</string>
    <string name="dialog_logout_no">아니요</string>
    <string name="dialog_delete_account_title">화원탈퇴가 완료되었어요!</string>
    <string name="dialog_delete_account_subtitle">더 나아진 모습으로 다시 만나길 기다릴게요.</string>
    <string name="dialog_delete_account_confirm">확인</string>
</resources>
